// Copyright 2023 the Kubeapps contributors.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package ocicatalog;

// The OCICatalog service defines the two RPCs for listing repositories and listing tags
// for a repository.
service OCICatalog {
    rpc ListRepositoriesForRegistry(ListRepositoriesRequest) returns (stream Repository);
    rpc ListTagsForRepository(ListTagsRequest) returns (stream Tag);
}

// RegistryProvider
//
// Optionally specify the registry provider when known.
enum RegistryProvider {
    UNKNOWN = 0;
    DOCKER_HUB = 1;
    HARBOR = 2;
}

// ListRepositoriesRequest
//
// Request for listing repositories of a registry or a namespaced registry.
message ListRepositoriesRequest {
    // The OCI registry for which the repositories should be listed.
    string registry = 1;

    // An optional namespace within which to list repositories.
    string namespace = 2;

    // An optional list of content types to filter.
    repeated string content_types = 3;

    // Perhaps switch to be a one-of, so when testing, can pass a token
    // directly? Though wouldn't want this to be used or available in prod.
    string kubernetes_secret = 4;

    // In self-hosted registry examples, such as a self-hosted Harbor registry,
    // there will be no information in the URL that can be used to determine
    // the provider (and hence, which strategy / API to use). The optional
    // registry_provider field can be used to explicitly identify the provider.
    RegistryProvider registry_provider = 5;
}

// Repository
//
// Uniquely identifies an OCI repository.
message Repository {
    string registry = 1;
    string namespace = 2;
    string name = 3;
}

// ListTagsRequest
//
// Identifies the repository for which tags are to be listed. Can be
// extended in the future with other options.
message ListTagsRequest {
    Repository repository = 1;

    RegistryProvider registry_provider = 2;
}

// Tag
//
// Simple tag for a repository.
message Tag {
    string name = 1;
}
